# ft_irc

./: .gitignore  .gitmodules  IRSSI_GUIDE.md  Makefile  Readme.md  TEST_SCENARIOS.md  cases_Passed.md  example_test.sh  exec.sh  irssi_log.txt  memory_leak_tester.sh  notes.txt  stress_test.sh
googletests/: CMakeLists.txt
googletests/tests/: hello_world_test.cpp  test_channels_clients_manager.cpp  test_comand_class.cpp  test_server.cpp
inc/: Channel.hpp  ChannelsClientsManager.hpp  Client.hpp  Command.hpp  IRCCommand.hpp  Reply.hpp  ReplyNumbers.hpp  Server.hpp  ft_irc.hpp
srcs/: Channel.cpp  ChannelsClientsManager.cpp  Client.cpp  Command.cpp  Command_utils.cpp  IRCCommand.cpp  Reply.cpp  Server.cpp  Server_Commands.cpp  main.cpp
